Fix wrapping tool titles on small screens

--- a/src/components/toolList.module.css
+++ b/src/components/toolList.module.css
@@ -5,14 +5,21 @@
 .row {
   display: flex;
   flex-wrap: wrap;
-  margin-right: -1rem;
+  margin-right: -.5rem;
   margin-bottom: -3rem;
-  margin-left: -1rem;
+  margin-left: -.5rem;
+}
+
+@media screen and (min-width: sm) {
+  .row {
+    margin-right: -1rem;
+    margin-left: -1rem;
+  }
 }
 
 .row .col {
-  padding-right: 1rem;
-  padding-left: 1rem;
+  padding-right: .5rem;
+  padding-left: .5rem;
   margin-bottom: 3rem;
   width: 33.33333%;
 }
@@ -20,6 +27,8 @@
 @media screen and (min-width: sm) {
   .row .col {
     width: 25%;
+    padding-right: 1rem;
+    padding-left: 1rem;
   }
 }
 
